--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,67 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/ZNlKk3Z.png"/></center><br>
+<font size = 1><font color="#CBBBB1">
+<center>december . 25 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img width="auto" height="25" src="https://i.imgur.com/o3Yyjkv.png"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the xmas spirit is here again, filling us with joy ..
+these last weeks i have worked hard : needle felting and packaging for the shy bunny store, commissioning, making content for my accounts.. i made lots of story games / templates and wallpapers for my instagram account, as a little xmas gift <font color="#d3a5a5" style="font-size:11px;">♡</font>
+in case you don't have the app, everything will be on my <a id="linkbjinho" href="https://care.pooftie.me" target="_blank">self care archive</a>..
+i just added a new section for the wallpapers, since i'll keep making more.
+also, i have been developing the game i will ( hopefully ) release in a few months !
+
+yes, the mobile game i talked about in the past, that i'm making with bubu <font color="#d3a5a5" style="font-size:11px;">♡</font>
+we made a lot of progress and changed some things too.
+i wanted to make it possible for people to play on any device they wanted, so we'll release it for browser !!!
+we're making an exclusive website for the game so you'll be able to login and play wherever you prefer : mobile or pc, of any kind. and since we'll have to pay for a server anyway, why not including some interactions between the players ?
+it certainly made the game a lot better and i'm so excited to see people having fun !!
+this game will not be focused on socializing ( like walking around meeting players and chatting ) but there will be some little things you can do like sending letters to your friends. it's partially an online game.
+i thought about posting some previews of how it's looking like ...
+but i will keep it a surprise, for once <sub><sub><sub><img width="auto" height="25" src="https://i.imgur.com/vqcfDWP.png"/></sub></sub></sub>
+can you guess which kind of drawing style i chose for this game ?
+
+talking on social games, i will make a full online game next year, and i already have lots of ideas !!! we will need more investment for this one so let's see how things go.
+"how about the 'pumpkin pie festival' ?" you must be thinking, after i presented the project and never talked about it again.. good news : we are not giving up on it, it just took me literal years to finally come up with a way of presenting the story, i had many ideas but none was good enough ; should i focus on storytelling or game mechanics ? or both ?
+the characters i created are really special to me and i didn't want to waste such a cute story, but now after multiple times rethinking the whole thing i'm finally sure of what i'm making !!
+this particular story will be part of a bigger thing, where i'll also include other little thematic stories from the fluffies.
+i expect it to be released next year as well, but it really depends on how much time we'll need !
+well i must focus on one big project at once or i will never get to finish anything .. be patient please <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+so today i don't have much i could show here, but well, this morning i just finished coloring and editing ( inspired on myself ) :
+</pre>
+<br><br>
+
+<center><img width="380px" height="auto" src="https://i.imgur.com/3tWbz7w.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+for this one i tried applying more textures & details.. what do you think ?
+after talking so much about my recent projects i wanted to remind you that simply doing things that makes us happy is important. not everything is about prestige, success, or revenue.
+if you do things with your heart, it is worth your time and effort !
+of course you will need to prioritize some things and we all need money to survive, but don't give up on the little things that bring you happiness.
+let's try our best to take a little time of our days to "play around" freely, because we deserve it <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i wish you all a very berry merry xmas <sub><sub><img width="auto" height="20" src="https://i.imgur.com/AlNyAdf.png"/></sub></sub>
+</pre><br><br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/WLygFj5.png"/></center><br>
+
+xoxo <sub><sub><sub><sub><sub><img width="auto" height="35" src="https://i.imgur.com/LiVvfl9.png"/></sub></sub></sub></sub></sub>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/ZNlKk3Z.png"/></center>
+
+<br><br><br>
+
 <center><img width="auto" height="50px" src="https://i.imgur.com/rt6nYVa.png"/><img width="auto" height="50px" src="https://i.imgur.com/rt6nYVa.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -723,90 +784,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/CTwyOBb.png"/></sub></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/e75XhPP.png"/><img src="https://i.imgur.com/e75XhPP.png"/><img src="https://i.imgur.com/e75XhPP.png"/></center>
-
-<br><br><br>
-
-
-<center><img height="35px" width="auto" src="https://i.imgur.com/N4WDA98.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>august . 27 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><img src="https://i.imgur.com/a8TiQfJ.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-this month my website completed 3 years online !!
-i'm grateful for everything i learned by sharing my works and thoughts, and specially by your motivating messages. thank you so much <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-
-i am slowly adapting into my new, lovely routine ..
-doing all housework, taking care of myself & bubu, spending entertaining time, resting properly and still having time for working on projects and eventual commissions... it's certainly a lot to think about !!
-but thankfully, i have the time for everything, if i don't spend energy with draining things.
-i'm trying my best to keep myself away from all stressful stuff, my plans for are working quite well !
-i made a few things lately, but i was feeling the need of resting more than usual.. so i thought it was a good idea to return playing a game that is such a comfort space for me : ragnarok online
-i started a whole new account in the official brazilian server, the one i have played since i was 7. i gotta say i am growing pretty fast in there and i'm having a lot of fun exploring the new content, so you might see some updates on my gaming page with my new characters and stuff, once i get to reborn them to transcendent <font color="#d3a5a5" style="font-size:11px;">♡</font>
-
-i'm feeling pretty happy about those experiences, and i'm sure that i will get to make more progress in the projects naturally, if i don't overdo myself.
-better spending one month working wholeheartedly than rushing one week wearifully, right ? <sub><img src="https://i.imgur.com/8OvdGqX.gif"/></sub>
-i like making posts once i have a handful of things to show, and now it's the right time, so let's see what i made :
-</pre>
-<br><br>
-
-<center><a href="/fluffy" target="_blank"><img src="https://i.imgur.com/Hva2CBT.png"/></a>
-<br><br>
-<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/pinky%20promise.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">pinky promise .mp3</font></a>　
-<br></center>
-
-<br>
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-this is a little dress up html game i just did for practicing some editing & basic javascript .. what do you think ? <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-i think it turned out very cute, and i'm happy to show you this lovely music box melody too. please click the teddy bear to play it yourself !
-
-after some time without making big ascii art + many requests on the symbols i use, i had the idea of making a web page for keeping my resources, <a id="linkbjinho" href="https://ascii.pooftie.me" target="_blank">ascii.pooftie.me</a> !!
-the layout is fully made with symbols ( with a bit of html magic, of course ) <sub><img src="https://i.imgur.com/mKQgU1i.gif"/></sub>
-i hope it can be useful for getting started or improving your little "text drawings" :
-</pre><br><br>
-
-<center><a href="https://ascii.pooftie.me" target="_blank"><img width="410px" height="auto" src="https://i.imgur.com/9PKbQpg.gif"/></a></center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it's certainly hard making stuff that look interesting with only symbols, it looks simple, but i'm proud <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i often have ideas that sound pretty random, but it's important to try and make things happen, right ?
-
-sometimes i can't get in the mood for working on my most important projects, but i try and make anything for at least make good use of my time by study & practice .. i believe this is a good way of resting while being productive !
-i find coloring very relaxing, and as i am feeling a little anxious lately, having cute drawings to color is such a bless <sub><img src="https://i.imgur.com/ldY80KV.gif"/></sub>
-so here are two of my most recent ones :
-</pre><br><br>
-
-<center><img width="330px" height="auto" src="https://i.imgur.com/nUoD8rM.png"/></center>
-<br>
-<center><img width="330px" height="auto" src="https://i.imgur.com/mgVb7Br.png"/></center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i tried editing the background this time too.. i don't know if i really like it or not, but well. i like the colors & textures.
-those adorable coloring pages are from <a id="linkbjinho" href="https://ameblo.jp/jyohanna/" target="_blank">ドリーミィー・フェザー</a> !
-
-i would like to express my gratitude for you who keep reading this blog to this day, i feel really lucky for having such sweet angels following my content and wishing me good things..
-i hope you are staying safe and living happy days, even if you never got to message or support me, i still acknowledge & really appreciate your presence here. <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
-see you next time,
-<br><br>
-xoxo <sub><sub><img src="https://i.imgur.com/VuYWNMS.gif"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img height="35px" width="auto" src="https://i.imgur.com/N4WDA98.png"/></center>
 
 <br><br><br>
 
