--- a/gaming.html
+++ b/gaming.html
@@ -614,13 +614,13 @@ cutest baby there is.<br>
 <font color="#a8958d">　<b>transformice</b><br>
 　　　community : international<br><br><br>
 
-<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 120px; line-height:10px; padding:5px;">
-<img id="fluffy" style="width:100px; height:auto; position:absolute; left:10px; top:25px;" src="https://i.imgur.com/RM4YHL8.png">
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 150px; line-height:10px; padding:5px;">
+<img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:25px;" src="https://i.imgur.com/XCScYag.png">
 
         <script type = "text/javascript">
             var image3 = document.getElementById("fluffy");
             var currentPos = 0;
-            var images3 = ["https://i.imgur.com/RM4YHL8.png", "https://i.imgur.com/V9aqg06.png"]
+            var images3 = ["https://i.imgur.com/XCScYag.png", "https://i.imgur.com/nh8mQnS.png", "https://i.imgur.com/sGb6MU8.png", "https://i.imgur.com/ldxZYzJ.png"]
 
             function volgendefoto3() {
                 if (++currentPos >= images3.length)
@@ -632,48 +632,64 @@ cutest baby there is.<br>
             setInterval(volgendefoto3, 1000);
         </script>
 
-<font color="#a37c81" style="position:absolute; left:115px; top:9px; font-size:8px;">
+<font color="#a37c81" style="position:absolute; left:115px; top:3px; font-size:8px;">
 <sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
-　<font color="#b89196">level :</font> 36<br>
+　<font color="#b89196">level :</font> 43<br>
 　<font color="#b89196">fav mode :</font> vanilla<br>
 　<font color="#b89196">fav title :</font> little bell<br>
-<br>
-<sub><sub><img width="auto" height="15px" src="https://i.imgur.com/QeXrxRx.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
-　<font color="#b89196">spiritual guide [26]</font><br>
-　<font color="#b89196">wind master [9]</font><br>
-</font>
+　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><img width="auto" height="15px" src="https://i.imgur.com/Szu5Z8a.png"></sub></sub><br>
+<br></font>
+ ‌ <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/6QZYFsf.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
+　<font color="#b89196">spiritual guide [31]</font><br>
+　<font color="#b89196" style="line-height:5px;">wind master [11]<br><br></font>
+　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="30px" src="https://i.imgur.com/ODOYLJa.png"></sub><br></font>
 
 <font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
 　<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/i5J84sF.png"></sub></sub> <b>progress titles :</b><br>
 <div style="overflow:hidden; border: 5px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 95px; height: 75px; overflow-x:hidden; padding:3px; margin-top:5px;">
-<div style="border: none; width: 87px; height: 73px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:2px;">
+<div style="border: none; width: 87px; height: 73px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:1px;">
 ‌<font color="#b0878d" style="font-size:7px;">
 • Little Mouse<br>
  ‌ • Shaman Disciple<br>
  ‌ • Accomplished<br>Shaman<br>
+ ‌ • Shaman<br>
  ‌ • Greedy Mouse<br>
  ‌ • Here ! Cheese !<br>
  ‌ • Yeeeeah Cheese ^^<br>
  ‌ • Cheeeeeese *-*<br>
  ‌ • Fast Mouse<br>
+ ‌ • Agile Mouse<br>
  ‌ • Glutton Mouse<br>
  ‌ • Gleany<br>
  ‌ • Plumpy Mouse<br>
  ‌ • Paunchy Mouse<br>
  ‌ • Chubby Mouse<br>
  ‌ • Fluffy Mouse<br>
+ ‌ • Tubby Mouse<br>
+ ‌ • The Chubby<br>
+ ‌ • The Puffy<br>
  ‌ • Activist Mouse<br>
  ‌ • Unionized Mouse<br>
  ‌ • Mouse on Strike<br>
+ ‌ • The Cheese Initiated<br>
+ ‌ • The Cheese Adept<br>
+ ‌ • The Cheese<br>Priestess<br>
+ ‌ • The Reaper<br>
+ ‌ • Cheese Finder<br>
+ ‌ • Cheese Knight<br>
  ‌ • Nice Mouse<br>
  ‌ • Adorable Mouse<br>
  ‌ • Charming Mouse<br>
  ‌ • Pretty Mouse<br>
+ ‌ • Cute Mouse<br>
+ ‌ • Frivolous Mouse<br>
+ ‌ • Generous<br>
+ ‌ • Cookies Eater<br>
  ‌ • Trick or Treat<br>
  ‌ • Ghostbuster<br>
  ‌ • Scooby-Doo<br>
- ‌ • Souris-chan<br>
  ‌ • Little Bell<br>
+ ‌ • Souris-chan<br>
  ‌ • Transformist<br>
  ‌ • Earthworm<br>
  ‌ • Jack-o'-lantern<br>
