--- a/commissions.html
+++ b/commissions.html
@@ -381,11 +381,11 @@ these are just some collage examples of the aesthetics i'm used to. my website r
 <font color="#bfa57a" style="font-size:10px">
 <sub><sub><img src="https://i.imgur.com/lpRUV0t.gif"/></sub></sub>　　pricing :<br><br>
 </font><font color="#aa998c" style="font-size:10px">
-　<font color="#e2c993" style="font-size:10px">layout :</font>　$30 dollars ( $100 reais )<br><br>
+　<font color="#e2c993" style="font-size:10px">layout :</font>　$30 dollars ( $150 reais )<br><br>
 　<font color="#e2c993" style="font-size:10px">each extra page :</font>　$5 dollars ( $20 reais )<br><br>
 
 payments must be made through paypal ( middlepot@gmail.com )<br>
-if you live in brazil you can also pay me by bank deposit ( caixa econômica ) or <a id="linkzinho" href="https://picpay.me/middlepot" target="_blank"><font color="#b7a596">picpay</font></a>.
+if you live in brazil you can also pay me through pix ( middlepot@gmail.com ) or <a id="linkzinho" href="https://picpay.me/middlepot" target="_blank"><font color="#b7a596">picpay</font></a>.
 <br><br>
 the index page and 404 page are for free. i'll also provide you a blank page in case you want to go further by yourself !<br>
 initially i'll make the index an example page for you with some cute graphics and codes i am going to provide !<br>
