--- a/gaming.html
+++ b/gaming.html
@@ -55,30 +55,141 @@ a:hover {cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
 }
 }
 </style>
-<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
 height: 4px;
-background: #FFF9F9;
+background: transparent;
 }
 ::-webkit-scrollbar-thumb {
 background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
 border: 1px dotted #e2d5d0;
 }
-#linkbjinho { color: #ab9e98; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
+#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+#linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
 <!--
 tooooooooltip
 -->
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
-
+<script>
+(function($){
+	var methods={
+		init:function(options){
+			var defaults={ 
+				tip_follows_cursor:false, //tooltip follows cursor: boolean
+				tip_delay_time:700, //tooltip delay before displaying: milliseconds
+				tip_fade_speed:300, //tooltip fade in/out speed: milliseconds
+				attribute:"title" //tooltip text come from this attribute
+			},
+			options=$.extend(defaults,options);
+			if($("#s-m-t-tooltip").length===0){
+				$("body").append("<div id='s-m-t-tooltip'><div></div></div>");
+			}
+			var smtTooltip=$("#s-m-t-tooltip"); 
+			smtTooltip.css({"position":"absolute","display":"none"}).data("smt-z-index",smtTooltip.css("z-index")).children("div").css({"width":"100%","height":"100%"});
+			function smtGetCursorCoords(event){
+				var smtCursorCoordsX=event.pageX,
+					smtCursorCoordsY=event.pageY;
+				smtTooltip.style_my_tooltips("position",{
+					smtCursorCoordsX:smtCursorCoordsX,
+					smtCursorCoordsY:smtCursorCoordsY
+				});
+			}
+			$(".smt-current-element").live("mouseout mousedown click",function(){
+				var $this=$(this);
+				clearTimeout(smtTooltip_delay);
+				smtTooltip.style_my_tooltips("hide",{
+					speed:$this.data("smt-fade-speed")
+				});
+				$(document).unbind("mousemove");
+				$this.removeClass("smt-current-element");
+				if($this.attr(options.attribute)===""){
+					$this.attr(options.attribute,$this.data("smt-title"));
+				}
+			});
+			return this["live"]("mouseover",function(event){
+				var $this=$(this),
+					title=$this.attr(options.attribute);
+				$this.addClass("smt-current-element").data({"smt-title":title,"smt-fade-speed":options.tip_fade_speed}).attr(options.attribute,"");
+				smtTooltip.style_my_tooltips("update",{
+					title:title,
+					speed:options.tip_fade_speed,
+					delay:options.tip_delay_time,
+					tip_follows_cursor:options.tip_follows_cursor
+				});
+				$(document).bind("mousemove", function(event){
+					smtGetCursorCoords(event); 
+				});
+			});
+		},
+		update:function(options){
+			var $this=$(this);
+			$this.stop().css({"display":"none","z-index":$this.data("smt-z-index")}).children("div").text(options.title);
+			smtTooltip_delay=setTimeout(function(){
+				$this.style_my_tooltips("show",{
+					speed:options.speed,
+					tip_follows_cursor:options.tip_follows_cursor
+				})
+			}, options.delay);
+		},
+		show:function(options){
+			var $this=$(this);
+			$this.stop().fadeTo(options.speed,1);
+			if(!options.tip_follows_cursor){
+				$(document).unbind("mousemove");
+			}
+		},
+		hide:function(options){
+			var $this=$(this);
+			$this.stop().fadeTo(options.speed,0,function(){
+				$this.css({"z-index":"-1"});
+			});
+		},
+		position:function(options){
+			var $this=$(this),
+				winScrollX=$(window).scrollLeft(),
+				winScrollY=$(window).scrollTop(),
+				tipWidth=$this.outerWidth(true),
+				tipHeight=$this.outerHeight(true),
+				leftOffset=(options.smtCursorCoordsX+tipWidth)-winScrollX,
+				topOffset=(options.smtCursorCoordsY+tipHeight)-winScrollY;
+			if(leftOffset<=$(window).width() && leftOffset<=$(document).width()){
+				$this.css("left",options.smtCursorCoordsX);
+			}else{
+				var thePosX=options.smtCursorCoordsX-tipWidth;
+				if(thePosX>=winScrollX){
+					$this.css("left",thePosX);
+				}else{
+					$this.css("left",winScrollX);
+				}
+			}
+			if(topOffset<=$(window).height() && topOffset<=$(document).height()){
+				$this.css("top",options.smtCursorCoordsY);
+			}else{
+				var thePosY=options.smtCursorCoordsY-tipHeight;
+				if(thePosY>=winScrollY){
+					$this.css("top",thePosY);
+				}else{
+					$this.css("top",winScrollY);
+				}
+			}
+		}
+	}
+	$.fn.style_my_tooltips=function(method){
+		if(methods[method]){
+			return methods[method].apply(this,Array.prototype.slice.call(arguments,1));
+		}else if(typeof method==="object" || !method){
+			return methods.init.apply(this,arguments);
+		}else{
+			$.error("Method "+method+" does not exist");
+		}
+	};
+})(jQuery);  
+</script>
 <script>
 
 (function($){
@@ -218,6 +329,10 @@ menuuuuuuuuuuuuuuu
 
 <body ondragstart="return false" style="background-image:url(https://i.imgur.com/s0V8ydU.png); background-repeat: no-repeat; background-size: cover; background-color:#fefbfb; font-family: Verdana; font-size: 10px;">
 <style>
+html {
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
 #base {
 position: absolute;
 	left: 13%;
@@ -273,8 +388,24 @@ height: 100px;
 overflow-x:hidden;
 z-index: 3;
  }
+@media screen and (max-width: 1000px) and (orientation: portrait){
+#everything { position: absolute; zoom: 155%;
+	left:570px;
+	top:80px;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg); }
+#stuff { overflow: auto; overflow: scroll; }
+}
+@media screen and (max-width: 1000px) and (orientation: landscape){
+#everything { position: absolute; zoom: 100%; left:20px; top:10px;}
+#stuff { overflow: auto; overflow: scroll; }
+}
 </style>
 
+<div id="everything">
 <div id="base">
 
 <div id="aaa">
@@ -306,11 +437,10 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="background-image:url(https://i.imgur.com/VusyAnK.png); background-attachment: fixed; width: 594px; height: 433px; overflow-x: hidden; text-align:justify; line-height: 100%">
+<div style="background-image:url(https://i.imgur.com/VusyAnK.png); width: 594px; height: 433px; overflow-x: hidden; overflow: auto; overflow: scroll; text-align:justify; line-height: 100%">
 
-<div style="width: 650px;height: 32px;overflow-x: hidden; overflow-y: hidden;">
-<img src="https://i.imgur.com/LGxPAUr.png"><img src="https://i.imgur.com/LGxPAUr.png"><img src="https://i.imgur.com/LGxPAUr.png"><img src="https://i.imgur.com/LGxPAUr.png"><img src="https://i.imgur.com/LGxPAUr.png">
-</div>
+<div style="background-image:url(https://i.imgur.com/LGxPAUr.png); background-size: auto auto; background-repeat: repeat-x; width: 590px; height: 32px; overflow-x: hidden; overflow-y: hidden;"></div>
+
 
 <br><br>
 <div style= "padding-left: 10%; padding-right: 10%;">
@@ -647,7 +777,7 @@ cutest baby there is.<br>
 <font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
 　<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/i5J84sF.png"></sub></sub> <b>progress titles :</b><br>
 <div style="overflow:hidden; border: 5px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 95px; height: 75px; overflow-x:hidden; padding:3px; margin-top:5px;">
-<div style="border: none; width: 87px; height: 73px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:1px;">
+<div style="border: none; width: 87px; height: 73px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:10px; padding-right:5px; padding-left:1px;">
 ‌<font color="#b0878d" style="font-size:7px;">
 • Little Mouse<br>
  ‌ • Shaman Disciple<br>
@@ -707,7 +837,7 @@ cutest baby there is.<br>
 <br>
 <br><br><br><br>
 <div style="position:relative; left:10%; bottom:30px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 270px; height: 300px; line-height:10px; padding:10px;">
-<div style="border: none; width: 260px; height: 290px; margin-top:6px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:5px;">
+<div style="border: none; width: 260px; height: 290px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:10px; padding-right:5px; padding-left:5px;">
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=droidhang.twgame.restaurant" target="_blank">animal restaurant</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.poppin_games.peterrabbit_hog" target="_blank">hidden world</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.cocone.p2" target="_blank">ポケコロツイン</a><br><br>
@@ -791,7 +921,7 @@ cutest baby there is.<br>
 </div>
 </div>
 
-
+</div>
 
 </body>
 
