--- a/lost.html
+++ b/lost.html
@@ -559,7 +559,7 @@ function getPosition(el) {
 
 <iframe src="/lost/0" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:27px;" scrolling="no"></iframe>
 
-
+</div>
 </body>
 
 <!--
