--- a/gaming.html
+++ b/gaming.html
@@ -398,10 +398,12 @@ z-index: 3;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
+#iframe { zoom: 155%; }
 }
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
 #stuff { overflow: auto; overflow: scroll; }
+#iframe { zoom: 100%; }
 }
 </style>
 
