--- a/gaming.html
+++ b/gaming.html
@@ -398,12 +398,12 @@ z-index: 3;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
-iframe { zoom: 155%; }
+#frame { zoom: 155%; }
 }
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
 #stuff { overflow: auto; overflow: scroll; }
-iframe { zoom: 100%; }
+#frame { zoom: 100%; }
 }
 </style>
 
@@ -736,7 +736,7 @@ cutest baby there is.<br>
 　　　invitation codes : 3 left<br><br><br>
 
 <div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 275px; line-height:10px;">
-<iframe src="/pupe/8" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
+<iframe id="frame" src="/pupe/8" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
 </div>
 </font>
 
