--- a/gaming.html
+++ b/gaming.html
@@ -399,7 +399,7 @@ z-index: 3;
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
 #frame { -webkit-transform: scale(1.55);
-    transform: scale(1.55); }
+    transform: scale(1.55); left:200px; top: 50px; }
 }
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
