--- a/fluffy.html
+++ b/fluffy.html
@@ -397,10 +397,14 @@ z-index: 3;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
+#frame { -webkit-transform: scale(1.55);
+    transform: scale(1.55); margin-left:145px; margin-top: 120px;}
 }
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
 #stuff { overflow: auto; overflow: scroll; }
+#frame { -webkit-transform: scale(1);
+    transform: scale(1); }
 }
 </style>
 
@@ -557,7 +561,7 @@ function getPosition(el) {
 </div>
 
 
-<iframe src="/fluffy/0" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:27px;" scrolling="no"></iframe>
+<iframe id="frame" src="/fluffy/0" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:27px;" scrolling="no"></iframe>
 
 </div>
 </body>
