--- a/recommended.html
+++ b/recommended.html
@@ -456,7 +456,11 @@ z-index: 3;
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <br><br><br>
 
-　‌‌<a href="https://cyber.nymph.garden" target="_blank"><img src="https://i.imgur.com/hC0kJmY.gif"></a>
+　‌‌<a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
+　　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>
+　　<a href="https://nef.neocities.org" target="_blank"><img src="https://i.imgur.com/RMLJJZo.gif"></a>
+
+　　‌‌<br><br>　<a href="https://cyber.nymph.garden" target="_blank"><img src="https://i.imgur.com/hC0kJmY.gif"></a>
 　<a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
 　<a href="https://hishoku-sora.blogspot.com" target="_blank"><img src="https://i.imgur.com/VpojhaF.gif"></a>
 
