--- a/portfolio.html
+++ b/portfolio.html
@@ -472,7 +472,7 @@ z-index: 3;
 <img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/INDlrdR.gif"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/De0lji0.png">
+<img width="300px" height="auto" src="https://i.imgur.com/qyIhmW6.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
