--- a/poofties.html
+++ b/poofties.html
@@ -568,28 +568,29 @@ welcome to my imagination. poofties are all the critters that i've created, poof
 in this world i received the "middlepot" (sur)name, but i'm usually called "puf" by them.<br>
 <br>
 in this page you can ..<br><br></font>
-<sub><sub><img src="https://i.imgur.com/u4wRgUy.gif"/></sub></sub>　<a href="/tinyjournal" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">read random texts</a></font><br><br>
-<a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">play little games</font></a>　<sub><sub><img src="https://i.imgur.com/sCzFf2t.gif"/></sub></sub><br><br>
+
 <sub><sub><img src="https://i.imgur.com/GPaxwqF.gif"/></sub></sub>　<a href="/stories" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">watch the episodes</a></font><br><br>
-<a href="/notes" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">read potato's notes</font></a>　<sub><sub><img src="https://i.imgur.com/VCZvIIU.gif"/></sub></sub><br>
+<a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">play little games</font></a>　<sub><sub><img src="https://i.imgur.com/sCzFf2t.gif"/></sub></sub><br><br>
+<sub><sub><img src="https://i.imgur.com/u4wRgUy.gif"/></sub></sub>　<a href="/notes" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">read potato's notes</font></a><br><br>
+<a href="/tinyjournal" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">read random texts</a></font>　<sub><sub><img src="https://i.imgur.com/VCZvIIU.gif"/></sub></sub><br>
 
-<br><br>
+<br><br><br>
 
-<font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
+<font style="font-size:9px" color="#d6c1c4">︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶</font><br><br>
 <br>
 </center>
 <center>
-<font color="#c69d8d">୨</font>　<font color="#af9595">main story</font>　<font color="#c69d8d">୧</font>
+<font color="#c69d8d">꒰</font>　<font color="#af9595">backstory</font>　<font color="#c69d8d">꒱</font>
 </center><br><br>
-<font style="font-size: 8px;" color="#b2b3b7">
+<font style="font-size: 8px;" color="#bf999e">
 
-the whole story begins in a small planet whose name is unknown. in this world, everything is made of food. not like our planet earth where all the things are edible but not very tasty, things are reeeally edible in this planet.<br>
+the whole story begins in a small planet which name is unknown. in this world, everything is made of food. not like our planet earth where all the things are edible but not very tasty, things are reeeally edible in this planet.<br>
 there are three kingdoms above the ground and one kingdom below.<br>
 the kingdom of the potatoes, beets and carrots are above ground.<br>
 the kingdom of the kiwis is below the ground, but nobody up there knows about it. for now.<br>
-potatoes are very silly and clumsy, while the beets are serious and like everything in its place. carrots are very annoying and like to make jokes about everything. the three kingdoms lived in peace, and the carrot kingdom, very small, having alliance with the two largest kingdoms.<br>
-one day, a little potato noticed that the beets were very boring. no one had ever thought about it before, but they are actually very boring. then the potato said "hey, stop being so boring !" and then the beet was very angry and told everybody that potatoes were being disrespectful. they wrote a great letter to the king potato, asking potatoes to apologize for their rude words. the king potato understood nothing and sent a letter back saying "what ?".<br>
-at that time, the beets declared war. carrots allied to potatoes, because they also agreed that the beets were boring and dull. it was a violent war that lasted many years. carrots never helped and were just leaving everything worst because they liked fights. so the smart elderly potatoes agreed not allow carrots to help in the war.<br>
+potatoes are very silly and clumsy, while the beets are serious and like everything in its place. carrots are very annoying and like to make jokes about everything. the three kingdoms lived in peace, and the carrot kingdom, very small, had alliance with the two largest kingdoms.<br>
+one day, a little potato noticed that the beets were very boring. no one had ever thought about it before, but they are actually very boring. then the potato said "hey, stop being so boring !" and then the beet got very angry and told everybody that potatoes were being disrespectful. they wrote a great letter to the king potato, asking potatoes to apologize for their rude words. the king potato understood nothing and sent a letter back saying "what ?".<br>
+at that time, the beets declared war. carrots allied to potatoes, because they also agreed that the beets were boring and dull. it was a violent war that lasted many years. carrots never helped and were just leaving everything worse because they liked fights, so the smart elderly potatoes agreed not allow carrots to help in the war.<br>
 carrots were very angry because they wanted to attack everyone and were being ignored. then they decided that they would attack the two kingdoms. they lost for obvious reasons.<br>
 potatoes and beets then realized they had sided against the carrots, then made peace. they living together was not that bad.<br>
 "by the way, what was the reason for the war ?" said the king potato.<br>
@@ -600,13 +601,13 @@ the beets were very sad and angry. they thought the potatoes were spreading thin
 "what's going on ?" said the king potato.<br>
 this small little planet is at war until the present day.<br>
 but there were two different creatures.<br>
-a potato and beet were best friends. otherwise the majority, the potato was very intelligent, while the beet was clumsy and silly. they thought all these wars without sense, then planned for years to leave that planet and go to a better world without silly wars.<br>
-after a long time building a rocket made of broccoli and cauliflower, managed from that planet and go into space. soon they saw another planet, much larger than that. it looked so beautiful and happy. they decided that this would be their new home.<br>
+a potato and beet were best friends. otherwise the majority, the potato was very intelligent, while the beet was clumsy and silly. they thought all these wars were nonsense, then planned for years to leave that planet and go to a better world without silly wars.<br>
+after a long time building a rocket made of broccoli and cauliflower, they took off from that planet and got into space. soon they saw another planet, much larger than that. it looked so beautiful and happy. they decided that this would be their new home.<br>
 out of nowhere, a small pink spaceship appears and hit the vegetable rocket. they fell on that planet too hard !!<br>
 their rocket smashed, a lot of little strange creatures came to look the pink spaceship and what was coming out of it, not understanding what were those vegetable pieces thrown around.<br>
-the potato and the beet opened their eyes and were troubled. what were those creatures ? why the clouds were whispering ? why the wind seemed to speak ? it was all so different from the world of them. it was very curious. but it was beautiful ! it was a beautiful planet full of colors and where everything seemed very happy. they were happy to be there.<br>
+the potato and the beet opened their eyes and were troubled. what were those creatures ? why the clouds were whispering ? it was all so different from their world. it was very curious. but it was beautiful ! it was a beautiful planet full of colors where everything seemed joyful. they were happy to be there.<br>
 then they tried to talk to the creatures, but they didn't see them. nor listened. what happened ?<br>
-the potato became angry and kicked a piece of broccoli aside. then a little girl with a very big head screamed and said "i saw that thing moving !!"<br>
+the potato got angry and kicked a piece of broccoli aside. then a little girl with a very big head screamed and said "i saw that thing moving !!"<br>
 oh no ! it could only mean one thing : they were dead. the fall on that planet was too strong and their vegetable little bodies couldn't endure. they were ghosts now.<br>
 but that doesn't make them so sad. they had each other, and could now observe everything that happened in that funny place, they could show signs that exist. these small signs gave chance for the new planet creatures know they were being constantly watched and they began to refer to potatoes and beets as deities.<br>
 fun things and tragic things happen every day in this world. in that cruel, but so funny world.
