--- a/milkywoods.html
+++ b/milkywoods.html
@@ -559,6 +559,24 @@ function getPosition(el) {
 <img src="https://i.imgur.com/VGk4m2O.gif"/><font color="#9c7776"> ‌milky woods</font>
 <br><font style="font-size: 8px;" color="#ad8887"> ‌ ‌ ‌ playing with dreams</font>
 <br>
+
+<br><br>
+<font style="font-size: 8px;" color="#b38d94">
+<sub><img src="https://i.imgur.com/xZ5r0Zx.gif"/></sub> ‌ my released games ( outside links ) :
+<br><br>
+<div style="width:240px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
+<a href="https://picrew.me/image_maker/619666" target="_blank"><img width="230px" height="auto" src="https://i.imgur.com/NwfY8KN.png"/></a>
+<br><br>
+<center>
+<a style="text-decoration:none;" href="https://picrew.me/image_maker/619666" target="_blank"><font style="font-size:9px" color="#c7a9ad">picrew dress up</font></a>
+</font>
+<br>
+<font style="font-size:9px" color="#d6c1c4">
+︶︶︶︶︶︶︶︶</font></center>
+</font>
+</div>
+
+
 <br><br>
 <font style="font-size: 8px;" color="#b38d94">
 <sub><img src="https://i.imgur.com/L7o6W1E.gif"/></sub> ‌ my html games ( pc & mobile ) :</font>
@@ -571,16 +589,22 @@ function getPosition(el) {
 
 </div>
 
+
 <br><br>
 <font style="font-size: 8px;" color="#b38d94">
 <sub><img src="https://i.imgur.com/NTkeKx8.gif"/></sub> ‌ my flash games ( pc only ) :
 <br><br>
-<a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img style="border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;" src="https://i.imgur.com/BltA2XT.gif"/></a>
+<div style="width:310px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
+<a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img src="https://i.imgur.com/BltA2XT.gif"/></a>
 <br><br>
-( click to download all the .swf files )
+<center>
+<a style="text-decoration:none;" href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><font style="font-size:9px" color="#c7a9ad">click to download all the .swf files</font></a>
 </font>
+<br>
+<font style="font-size:9px" color="#d6c1c4">
+︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶</font></center>
+</div>
 <br><br><br><br>
-
 
 </center>
 
