--- a/archive.html
+++ b/archive.html
@@ -454,6 +454,108 @@ font-family: Verdana;">
 <br>
 
 
+
+
+<center><img src="https://i.imgur.com/e75XhPP.png"/><img src="https://i.imgur.com/e75XhPP.png"/><img src="https://i.imgur.com/e75XhPP.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 23 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img width="auto" height="20px;" src="https://i.imgur.com/nCiZZUf.png"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the spooky time of the year is here once again, time went by so fast ..
+how have you been ? i hope you all are taking care !
+for me, it has been a mixture of low energy, mental exhaustion, anxiety and lots of ideas floating around -
+basically : every spring i get sick, and this year it wasn't different.. the climate changes + rain season makes me really physically weak, my blood pressure is always low, it's hard to eat, the medicine makes me dizzy ..
+not being able to work fully on my projects makes me very anxious, specially now that i'm not getting to make as much money as i need for a living.
+i'm doing what i can, trying to take care of myself properly, bubu really helps me <font color="#d3a5a5" style="font-size:11px;">♡</font>
+doing housework is taking me a lot of energy, but i really want to keep doing my tasks. i know that i'm being slow, please be patient with me .. i promise i'll keep making content and doing my best, i know i will gradually feel better <sub><sub><img width="auto" height="20px;" src="https://i.imgur.com/ge3ODRS.png"/></sub></sub>
+
+these days have been quite interesting, and revealed a bit about myself.. things i haven't thought until now, some reasons behind my recent anxiety
+i like calling myself a "timid adventurer", which is certainly a paradox, but well ... i have always been filled with the need of discovering new things - however, i can be extremely methodical and fearful.
+thankfully, i always had great passion for small achievements, so just going to the woods to look for insects and wild flowers was enough to feed my sweet tooth for exploration <sub><sub><img width="auto" height="20px;" src="https://i.imgur.com/OQcFLx9.png"/></sub></sub>
+because of the pandemic i know that i must not go outside except for the absolute necessary. many people agree that it is okay to leave if it is an isolated place ( which i have always preferred for my activities ) but i haven't been able to feel comfortable due to the current circumstances of the world ...
+after losing my mother and seeing many others losing loved ones, i developed a terrible fear of getting sick and seeing other people sick, to the point of preventing me from doing things i loved.
+i know it have worsened my anxiety terribly these past times, and i think ( like many other people ) that i will need help and a lot of patience to be able to deal with the outside world after all this is over.. not only does seeing other people make me scared but i have been feeling dirty and contaminated after coming home, even from the grocery store ! i have avoided many situations, and the worst thing is that i know that it is important to fear this disease <sub><sub><img width="auto" height="20px;" src="https://i.imgur.com/p5vHphW.png"/></sub></sub>
+despite all this, i have managed to make very happy memories by simply.. playing games !!
+playing ragnarok again has been really good for my mental health, even though exploring a virtual world isn't the same, it's certainly making me really happy <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+i had a lot of fun lately, and when i'm feeling weak knowing i can just lay down in bed and play a little bit makes me feel a lot better.
+i'm really looking forward to going outside again and living new little adventures in real life, but i really do appreciate the ones i'm having inside home as well <sub><sub><img width="auto" height="20px;" src="https://i.imgur.com/3OAOa4a.png"/></sub></sub>
+
+talking on mmorpg, i started playing tree of savior ! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it's a 2016 game that is said to be a "spiritual successor" of ragnarok ( i don't believe so for my experience, they're very different in many ways so i don't think it's fair to keep making comparisons ), and i'm happy that now i can play it properly with my new laptop .. it looks absolutely stunning and it's very complex, with looots of classes and different builds - i'm having a lot of fun trying things out and exploring !!
+the maps are all so beautiful i can't stop looking at them <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+sometimes i just stop, sit, and listen to the bgm while looking at the screen. the music is so so good and really helps with the ambiance + simply leveling up is quite relaxing too !
+some of the bgm is from soundtemp, same composers from the ragnarok bgm that i love with my whole heart, so i knew it was going to be good.. but seriously, playing the game itself is a complete experience and i have no words to describe.
+well, if you haven't seen yet, check my /gaming page because i made very cute little profiles for my characters with lots of info & images <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+so, enough of talking : i made a new web page, mostly for studying css image & text effects, but in the end i liked it so much i might work more on the idea ..
+there are just some collages and phrases now, but i could put some more interactive content in the future, probably ?
+i really like sites that are just a bunch of random pages that you can explore clicking on things, so i'm thinking of actually putting something after the 4th door !
+i'm not sure yet about what i'm going to do with it, so for now let's just appreciate what we already have at <a id="linkbjinho" href="https://world.pooftie.me" target="_blank">world.pooftie.me</a> :
+</pre>
+<br><br>
+
+<center><a href="https://world.pooftie.me" target="_blank"><img width="410px" height="auto" src="https://i.imgur.com/qgOVTpF.gif"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/hideout.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">hideout .mp3</font></a>　
+<br></center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+there is also this music box melody for the pages !!
+i'll surely put more music & sound effects in the next pages, for making it a more interesting experience ~
+please let me know what you think !
+
+i also worked on this little project of adapting my social media exclusive content into html pages, in an interesting & responsive way .. since i chose these apps carefully for each kind of content ( and they've been working pretty well for the time being ) it would be a waste if i just had to repost everything manually !
+i'm satisfied with the way i post on these apps, even though i don't have much space for customization, i'm using them specifically to let my helpful / comforting stuff reach more people on the internet ; but although most people nowadays are using social media instead of personal websites, i got to know some people who don't have accounts and are not willing to make them, and as much as i understand them perfectly, i want to reach them too !!
+so, i got an idea by looking at my tumblr layout : there you can see everything i post & reblog, in a cute web page, and you don't need to have an account for that. the content is placed inside the layout.
+sadly, just making iframes for inserting my profiles into some layout isn't an option - for security reasons - so i thought of embeding my posts instead.. and i could do so with my twitter posts pretty easily, customizing everything the way i wanted, but with instagram and youtube things got waaaay harder ; ;
+my instagram posts aren't really exclusive because they're just reposts from my /help page, so i'm only interested in making some of my stories out there ( some of them were reposted here on my blog so i don't mind ). my reminders, thoughts, templates & games are really precious and i want to keep them in easy access for everyone !
+i decided to actually repost those stories, since there is not a safe way to embed them.. maybe i will find something later.
+with youtube i actually can embed my comfort playlist, but customizing the iframe is such a headache and i really don't want to mess with their api right now, as i find it way easier to just make my own html player ( + i could also use with all of my other videos )
+so i made a very cute player i can now use for linking my fav yt videos + uploading my poofties videos here !!
+</pre><br><br>
+
+<center><a href="https://care.pooftie.me" target="_blank"><img width="410px" height="auto" src="https://i.imgur.com/rq08jrZ.gif"/></a></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the <a id="linkbjinho" href="https://care.pooftie.me" target="_blank">care.pooftie.me</a> page turned out a really comfy place, where everyone can access and easily download the best of my accounts, while watching / listening to some cute videos. this experience is exactly what i wanted to achieve, so i'm really proud !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i hope you all can make good use of this "self care archive" from now on .. !
+i will keep it always updated, as i'll try to return on posting on my accounts at least weekly.
+
+i'm currently working on a new crafting technique and also sewing a little outfit, i believe i will finish everything by next week.. so for the next post you'll get to see them + a new poofties episode !!
+i hope you're looking forward to it, see you in two weeks <sub><img width="auto" height="22px;" src="https://i.imgur.com/IdjBPPg.png"/></sub>
+i wish you a very happy halloween ! eat lots of candy, but carefully !!
+</pre><br><br>
+
+<center><img src="https://i.imgur.com/22l0w9d.png"/></center>
+
+<br><br>
+xoxo <sub><sub><img src="https://i.imgur.com/CTwyOBb.png"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/e75XhPP.png"/><img src="https://i.imgur.com/e75XhPP.png"/><img src="https://i.imgur.com/e75XhPP.png"/></center>
+
+<br><br><br>
+
+
+
+
+<br>
+
+
 <center><img height="35px" width="auto" src="https://i.imgur.com/N4WDA98.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
