--- a/gaming.html
+++ b/gaming.html
@@ -697,48 +697,12 @@ cutest baby there is.<br>
 <br><br><br><br>
 
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
-<font color="#a8958d">　<b>tree of savior</b><br>
-　　　official server : silute<br>
-　　　team name : puf<br><br><br>
-
-<div style="position:relative; left:4%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 390px; height: 170px; line-height:10px;">
-<img style="position:absolute; left:130px; border: 10px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round;" width="105px" height="auto" src="https://i.imgur.com/4511VBQ.gif">
-<font color="#a37c81" style="position:absolute; left:10px; top:9px; font-size:8px;">
-<sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/dI0j83Y.png"></sub></sub></sub> ‌<b>pupu</b><br><br>
-　<font color="#b89196">level :</font> 227<br>
-　<font color="#b89196">main class :</font> warlock<br>
-　<font color="#b89196">build :</font> wiz1›war3›ele3<br>
-　<font color="#b89196">traits :</font> bold & childish<br>
-　<font color="#b89196">hometown :</font> klaipeda<br>
-　<font color="#b89196">aspiration :</font> go on many<br>　adventures, have fun !!<br>
-　<font color="#b89196">fav place :</font> myrkiti farm<br>
-　<font color="#b89196">fav music :</font> <a href="https://file.pooftie.me/tos/47.mp3" target="_blank"><font color="#b08087">47.mp3</font></a>
-</font>
-<font color="#a37c81" style="position:absolute; left:265px; top:9px; font-size:8px;">
-<sub><sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/Ff73KkG.png"></sub></sub></sub></sub> <b>photo book :</b><br>
-<br>
-• <a href="https://file.pooftie.me/tos/uskis%20arable%20land.jpg" target="_blank"><font color="#b08087">uskis arable land</font></a><br>
-• <a href="https://file.pooftie.me/tos/karolis%20springs.jpg" target="_blank"><font color="#b08087">karolis springs</font></a><br>
-• <a href="https://file.pooftie.me/tos/woods%20of%20the%20linked%20bridges.jpg" target="_blank"><font color="#b08087">woods of the linked bridges</font></a><br>
-• <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank"><font color="#b08087">myrkiti farm</font></a><br>
-• <a href="https://file.pooftie.me/tos/aqueduct%20bridge%20area.jpg" target="_blank"><font color="#b08087">aqueduct bridge area</font></a><br>
-• <a href="https://file.pooftie.me/tos/vieta%20gorge.jpg" target="_blank"><font color="#b08087">vieta gorge</font></a><br>
-• <a href="https://file.pooftie.me/tos/veja%20ravine.jpg" target="_blank"><font color="#b08087">veja ravine</font></a><br>
-• <a href="https://file.pooftie.me/tos/tenants'%20farm.jpg" target="_blank"><font color="#b08087">tenants' farm</font></a><br>
-• <a href="https://file.pooftie.me/tos/knidos%20jungle.jpg" target="_blank"><font color="#b08087">knidos jungle</font></a><br>
-• <a href="https://file.pooftie.me/tos/srautas%20gorge.jpg" target="_blank"><font color="#b08087">srautas gorge</font></a><br>
-</div>
-</font>
-
-<br><br><br><br>
-
-<sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
 <font color="#a8958d">　<b>poupée girl</b><br>
 　　　backup server : bentewee<br>
 　　　invitation codes : 3 left<br><br><br>
 
 <div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 275px; line-height:10px;">
-<iframe id="frame" src="/pupe/10" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
+<iframe id="frame" src="/pupe/11" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
 </div>
 </font>
 
@@ -754,7 +718,7 @@ cutest baby there is.<br>
         <script type = "text/javascript">
             var image3 = document.getElementById("fluffy");
             var currentPos = 0;
-            var images3 = ["https://i.imgur.com/XCScYag.png", "https://i.imgur.com/nh8mQnS.png", "https://i.imgur.com/sGb6MU8.png", "https://i.imgur.com/ldxZYzJ.png"]
+            var images3 = ["https://i.imgur.com/SmdDUgJ.png", "https://i.imgur.com/XCScYag.png", "https://i.imgur.com/sGb6MU8.png", "https://i.imgur.com/ldxZYzJ.png", "https://i.imgur.com/4vqp71q.png"]
 
             function volgendefoto3() {
                 if (++currentPos >= images3.length)
@@ -834,6 +798,43 @@ cutest baby there is.<br>
 </font>
 
 </div>
+
+<br><br><br><br>
+
+<sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
+<font color="#a8958d">　<b>tree of savior</b><br>
+　　　official server : silute<br>
+　　　team name : puf<br><br><br>
+
+<div style="position:relative; left:2%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 390px; height: 170px; line-height:10px;">
+<img style="position:absolute; left:130px; border: 10px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round;" width="105px" height="auto" src="https://i.imgur.com/4511VBQ.gif">
+<font color="#a37c81" style="position:absolute; left:10px; top:9px; font-size:8px;">
+<sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/dI0j83Y.png"></sub></sub></sub> ‌<b>pupu</b><br><br>
+　<font color="#b89196">level :</font> 227<br>
+　<font color="#b89196">main class :</font> warlock<br>
+　<font color="#b89196">build :</font> wiz1›war3›ele3<br>
+　<font color="#b89196">traits :</font> bold & childish<br>
+　<font color="#b89196">hometown :</font> klaipeda<br>
+　<font color="#b89196">aspiration :</font> go on many<br>　adventures, have fun !!<br>
+　<font color="#b89196">fav place :</font> myrkiti farm<br>
+　<font color="#b89196">fav music :</font> <a href="https://file.pooftie.me/tos/47.mp3" target="_blank"><font color="#b08087">47.mp3</font></a>
+</font>
+<font color="#a37c81" style="position:absolute; left:265px; top:9px; font-size:8px;">
+<sub><sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/Ff73KkG.png"></sub></sub></sub></sub> <b>photo book :</b><br>
+<br>
+• <a href="https://file.pooftie.me/tos/uskis%20arable%20land.jpg" target="_blank"><font color="#b08087">uskis arable land</font></a><br>
+• <a href="https://file.pooftie.me/tos/karolis%20springs.jpg" target="_blank"><font color="#b08087">karolis springs</font></a><br>
+• <a href="https://file.pooftie.me/tos/woods%20of%20the%20linked%20bridges.jpg" target="_blank"><font color="#b08087">woods of the linked bridges</font></a><br>
+• <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank"><font color="#b08087">myrkiti farm</font></a><br>
+• <a href="https://file.pooftie.me/tos/aqueduct%20bridge%20area.jpg" target="_blank"><font color="#b08087">aqueduct bridge area</font></a><br>
+• <a href="https://file.pooftie.me/tos/vieta%20gorge.jpg" target="_blank"><font color="#b08087">vieta gorge</font></a><br>
+• <a href="https://file.pooftie.me/tos/veja%20ravine.jpg" target="_blank"><font color="#b08087">veja ravine</font></a><br>
+• <a href="https://file.pooftie.me/tos/tenants'%20farm.jpg" target="_blank"><font color="#b08087">tenants' farm</font></a><br>
+• <a href="https://file.pooftie.me/tos/knidos%20jungle.jpg" target="_blank"><font color="#b08087">knidos jungle</font></a><br>
+• <a href="https://file.pooftie.me/tos/srautas%20gorge.jpg" target="_blank"><font color="#b08087">srautas gorge</font></a><br>
+</div>
+</font>
+
 
 <br><br><br><br>
 
